styles/filtered-temples.css
:root {
    --primary-color: rgb(5, 99, 122);
    --titles-font: "Roboto", "sans serif";
    --body-font: "Montserrat", sans-serif;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-family: var(--body-font);
}

header {
    background-color: var(--primary-color);
    display: flex;
	justify-content: space-between;
    align-items: center;
    color: aliceblue;
    padding: 1rem;
}

h1 {
    font-family: var(--titles-font);
    font-size: 1.5rem;
}
header, main, footer {
    margin: 0 auto;
    max-width: 800px;
}

@media (max-width: 600px) { 
    nav { 
        display: none; 
    } 
    .menu-icon { 
        display: block; 
        cursor: pointer; 
        text-align: right; 
        position: absolute; 
        right: 10px; top: 20px; 
    }
    header {
        display: flex;
        flex-direction: column;
    } 
}

nav.active {
    display: block;

}

nav ul {
    list-style: none;
	display: flex;
    flex-direction: column;
}

nav a {
    display: block;
	color: aliceblue;
	text-align: center;
	padding: 1rem;
	text-decoration: none;
	font-size: medium;
}

nav a:hover {
    background-color: aliceblue;
	color: #000;
}

main img {
    width: 200px;
    
}

h2 {
    text-align: center;
    padding-bottom: 2rem;
}

figure {
    font-size: 12px;
    text-align: center;
}

footer {
    background-color: var(--primary-color);
    align-items: center;
    color: aliceblue;
    padding: 2rem;
    text-align: center;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

section {
    border: 2px solid rgb(213, 234, 248);
    background-color: rgb(213, 246, 248);
    text-align: center;
    padding: 1rem;
    width: 70%;
    height: 320px;
    margin: 1rem;
}

section h3 {
    font-family: var(--titles-font);
    font-style: italic;
    padding-bottom: 10px;
}

.label {
    color: rgb(79, 4, 150);
    font-weight: 500;
    font-size: smaller;
}

section p {
    font-size: smaller;
}

section img {
    margin: 2rem;
    height: 60%;
    width: 250px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.418);
}

